// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoicesComponent Snapshot test With choice selected 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 24,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#F1F5FF",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 24,
            "height": "100%",
            "position": "absolute",
          },
          Array [
            Object {
              "backgroundColor": "#B2CBFFAA",
            },
            Object {
              "width": "0.00%",
            },
          ],
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        accessibilityLiveRegion="polite"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 18,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "borderColor": "#3C7AFF",
              "borderRadius": 10,
              "borderWidth": 2,
              "height": 20,
              "margin": 8,
              "width": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#3C7AFF",
                  "borderRadius": 5,
                  "height": 10,
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                  "width": 10,
                }
              }
            />
          </View>
        </View>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "System",
              "fontWeight": "400",
              "textAlign": "left",
            },
            Array [
              undefined,
              Object {
                "color": "#3C7AFF",
              },
            ],
          ]
        }
      >
        Objective-C
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
            "textAlign": "left",
          },
          Array [
            Object {
              "marginRight": 8,
            },
            Object {
              "color": "#3C7AFF",
            },
          ],
        ]
      }
    >
      0.00%
    </Text>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 24,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#F1F5FF",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 24,
            "height": "100%",
            "position": "absolute",
          },
          false,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        accessibilityLiveRegion="polite"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 18,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "borderColor": "#BFD3FE",
              "borderRadius": 10,
              "borderWidth": 2,
              "height": 20,
              "margin": 8,
              "width": 20,
            }
          }
        />
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "System",
              "fontWeight": "400",
              "textAlign": "left",
            },
            Array [
              undefined,
              false,
            ],
          ]
        }
      >
        Python
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
            "textAlign": "left",
          },
          Array [
            Object {
              "marginRight": 8,
            },
            false,
          ],
        ]
      }
    >
      0.00%
    </Text>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 24,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#F1F5FF",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 24,
            "height": "100%",
            "position": "absolute",
          },
          false,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        accessibilityLiveRegion="polite"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 18,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "borderColor": "#BFD3FE",
              "borderRadius": 10,
              "borderWidth": 2,
              "height": 20,
              "margin": 8,
              "width": 20,
            }
          }
        />
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "System",
              "fontWeight": "400",
              "textAlign": "left",
            },
            Array [
              undefined,
              false,
            ],
          ]
        }
      >
        Ruby
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
            "textAlign": "left",
          },
          Array [
            Object {
              "marginRight": 8,
            },
            false,
          ],
        ]
      }
    >
      0.00%
    </Text>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 24,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#F1F5FF",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 24,
            "height": "100%",
            "position": "absolute",
          },
          false,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        accessibilityLiveRegion="polite"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 18,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "borderColor": "#BFD3FE",
              "borderRadius": 10,
              "borderWidth": 2,
              "height": 20,
              "margin": 8,
              "width": 20,
            }
          }
        />
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "System",
              "fontWeight": "400",
              "textAlign": "left",
            },
            Array [
              undefined,
              false,
            ],
          ]
        }
      >
        Swift
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
            "textAlign": "left",
          },
          Array [
            Object {
              "marginRight": 8,
            },
            false,
          ],
        ]
      }
    >
      0.00%
    </Text>
  </View>,
]
`;

exports[`ChoicesComponent Snapshot test With no choice selected 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 24,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#F1F5FF",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 24,
            "height": "100%",
            "position": "absolute",
          },
          false,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        accessibilityLiveRegion="polite"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 18,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "borderColor": "#BFD3FE",
              "borderRadius": 10,
              "borderWidth": 2,
              "height": 20,
              "margin": 8,
              "width": 20,
            }
          }
        />
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "System",
              "fontWeight": "400",
              "textAlign": "left",
            },
            Array [
              undefined,
              false,
            ],
          ]
        }
      >
        Objective-C
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
            "textAlign": "left",
          },
          Array [
            Object {
              "marginRight": 8,
            },
            false,
          ],
        ]
      }
    >
      0.00%
    </Text>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 24,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#F1F5FF",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 24,
            "height": "100%",
            "position": "absolute",
          },
          false,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        accessibilityLiveRegion="polite"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 18,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "borderColor": "#BFD3FE",
              "borderRadius": 10,
              "borderWidth": 2,
              "height": 20,
              "margin": 8,
              "width": 20,
            }
          }
        />
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "System",
              "fontWeight": "400",
              "textAlign": "left",
            },
            Array [
              undefined,
              false,
            ],
          ]
        }
      >
        Python
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
            "textAlign": "left",
          },
          Array [
            Object {
              "marginRight": 8,
            },
            false,
          ],
        ]
      }
    >
      0.00%
    </Text>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 24,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#F1F5FF",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 24,
            "height": "100%",
            "position": "absolute",
          },
          false,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        accessibilityLiveRegion="polite"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 18,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "borderColor": "#BFD3FE",
              "borderRadius": 10,
              "borderWidth": 2,
              "height": 20,
              "margin": 8,
              "width": 20,
            }
          }
        />
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "System",
              "fontWeight": "400",
              "textAlign": "left",
            },
            Array [
              undefined,
              false,
            ],
          ]
        }
      >
        Ruby
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
            "textAlign": "left",
          },
          Array [
            Object {
              "marginRight": 8,
            },
            false,
          ],
        ]
      }
    >
      0.00%
    </Text>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 24,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#F1F5FF",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 24,
            "height": "100%",
            "position": "absolute",
          },
          false,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        accessibilityLiveRegion="polite"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 18,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "borderColor": "#BFD3FE",
              "borderRadius": 10,
              "borderWidth": 2,
              "height": 20,
              "margin": 8,
              "width": 20,
            }
          }
        />
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "System",
              "fontWeight": "400",
              "textAlign": "left",
            },
            Array [
              undefined,
              false,
            ],
          ]
        }
      >
        Swift
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
            "textAlign": "left",
          },
          Array [
            Object {
              "marginRight": 8,
            },
            false,
          ],
        ]
      }
    >
      0.00%
    </Text>
  </View>,
]
`;
